@@ -29,6 +29,8 @@ import java.util.Map;
 public final class ModSounds {
     private static final Map<String, SoundEvent> SOUND_EVENTS = new LinkedHashMap<>();
 
+    public static final SoundEvent CURSED_HEART_USE = create("cursed_heart_use");
+    public static final SoundEvent ENCHANTED_HEART_USE = create("enchanted_heart_use");
     public static final SoundEvent HEART_CONTAINER_USE = create("heart_container_use");
     public static final SoundEvent PLAYER_DIED = create("player_died");
 
