@@ -68,6 +68,8 @@ misc.scalinghealth.difficultyMeterText=DIFFICULTY
 
 # Sound effect subtitles
 
+scalinghealth.subtitle.cursed_heart_use=Cursed heart used
+scalinghealth.subtitle.enchanted_heart_use=Enchanted heart used
 scalinghealth.subtitle.heart_container_use=Heart container used
 
 # April Fool's sounds
