@@ -1,5 +1,6 @@
 1.3.29
 Added: Configs to tweak health text position (#133)
+Added: Sound events for all heart items (for resource pack makers, the default sounds are the same)
 Fixed: Blight fires being too dark
 Fixed: Mobs continuously redoing difficulty logic when health increases are disabled and difficulty is not
 Fixed: Commands not working in LAN games
